<resources>
    <string name="app_name"><i>CNC Machinist</i></string>
    <string name="drawer_open">open drawer</string>
    <string name="drawer_close">close drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="fragment1">Tela1</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="action_settings">Settings</string>
    <string name="item1"><i>mm to inch</i></string>
    <string name="window_1"><i>mm to inch</i></string>
    <string name="item2"><i>drill_tip</i></string>
    <string name="window_2"><i>drill_tip</i></string>
    <string name="item3"><i>roughness</i></string>
    <string name="window_3"><i>roughness</i></string>
    <string name="item4"><i>speed_feeds</i></string>
    <string name="window_4"><i>speed_feeds</i></string>

    <string name="text1">medida mm</string>
    <string name="text2">aproximação da fração</string>
    <string name="text3">polegada equivalente</string>
    <string name="text4">polegada parte inteira</string>
    <string name="text5">polegada parte decimal</string>
    <string name="text6">aprox. da fração decimal</string>
    <string name="text7">polegada numerador</string>
    <string name="text8">polegada fração1</string>
    <string name="text9">polegada fração2</string>
    <string name="text10">resultado em pol. fracionaria</string>
    <string name="text11">resultado em mm atualizado</string>
    <string name="text12">inch_e</string>
    <string name="text13">inch_i</string>
    <string name="text14">inch_d</string>
    <string name="text15">inch_fa</string>
    <string name="text16">inch_n</string>
    <string name="text17">inch_f1</string>
    <string name="text18">inch_f2</string>
    <string name="text19">inch_r</string>
    <string name="text20">mm_r</string>
    <string name="edit1">valor1</string>
    <string name="edit2">valor2</string>
    <string name="button1">Execute</string>
    <string name="button2">Clear</string>
    <string name="Message">Data Blank</string>
    <string name="Message2">Not is inch fraction</string>
    <string name="Message3">Data out range</string>

    <string name="drill_diameter">drill diameter</string>
    <string name="tip_diameter">tip diameter</string>
    <string name="tip_angle">tip angle</string>
    <string name="tip_length">tip length</string>
    <string name="tip_discard">tip discard</string>
    <string name="full_tip">full tip</string>
    <string name="result1">result 1</string>
    <string name="result2">result 2</string>
    <string name="result3">result 3</string>
    <string name="clear">clear</string>
    <string name="execute">execute</string>
    <string name="bd"> ø › </string>
    <string name="md"> ø ‹  </string>
    <string name="a"> α </string>

</resources>
