<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    >

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/navS1T1"
            android:title="@string/item1"
            android:icon="@drawable/home"
            ></item>

        <item
            android:id="@+id/navS1T2"
            android:title="@string/item2"
            android:icon="@drawable/menur"
            app:menu = "@menu/drawer_menu_sub"
            ></item>

        <item
            android:id="@+id/navS1T3"
            android:title="@string/item3"
            android:icon="@drawable/grid"
            ></item>

    </group>

    <item android:title="Seção 2">

        <menu>
            <item
                android:id="@+id/navS2T1"
                android:title="@string/item4"
                android:icon="@drawable/menuq"
                ></item>

            <item
                android:id="@+id/navS2T2"
                android:title="Tela5"
                android:icon="@drawable/hamburger"
                ></item>
        </menu>

    </item>

</menu>