<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="layout.Fragment_1">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/degrade_linear_blue"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        >

        <RadioGroup
            android:layout_width="match_parent"
            android:weightSum="2"
            android:layout_height="match_parent"
            android:layout_above="@+id/editText1"
            android:orientation="horizontal"
            android:layout_alignParentRight="true"
            android:id="@+id/radiogroup"
            >

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="20dp"
                android:text="medida menor"
                android:id="@+id/radioButton"
                android:checked="false"
                android:layout_alignParentTop="true"
                android:layout_alignLeft="@+id/textView1"
                android:layout_alignStart="@+id/textView1"
                android:focusable="true"
                android:focusableInTouchMode="false" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="medida maior"
                android:id="@+id/radioButton2"
                android:checked="true"
                android:layout_alignBottom="@+id/radioButton"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="45dp"
            android:text="@string/text1" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignLeft="@+id/textView1"
            android:layout_below="@+id/textView1"
            android:layout_marginTop="10dp"
            android:text="@string/text2" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView2"
            android:layout_below="@+id/textView2"
            android:layout_marginTop="10dp"
            android:text="@string/text3" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView3"
            android:layout_below="@+id/textView3"
            android:layout_marginTop="10dp"
            android:text="@string/text4" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView4"
            android:layout_below="@+id/textView4"
            android:layout_marginTop="10dp"
            android:text="@string/text5" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView5"
            android:layout_below="@+id/textView5"
            android:layout_marginTop="10dp"
            android:text="@string/text6" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView6"
            android:layout_below="@+id/textView6"
            android:layout_marginTop="10dp"
            android:text="@string/text7" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView7"
            android:layout_below="@+id/textView7"
            android:layout_marginTop="10dp"
            android:text="@string/text8" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView8"
            android:layout_below="@+id/textView8"
            android:layout_marginTop="10dp"
            android:text="@string/text9" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView9"
            android:layout_below="@+id/textView9"
            android:layout_marginTop="10dp"
            android:text="@string/text10" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView10"
            android:layout_below="@+id/textView10"
            android:layout_marginTop="10dp"
            android:text="@string/text11" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView1"
            android:layout_gravity="bottom"
            android:layout_toRightOf="@+id/textView10"
            android:ems="10"
            android:textAppearance="?textAppearanceSmallPopupMenu"
            android:inputType="numberDecimal"
            android:textAlignment="center" />

        <requestFocus />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/textView3"
            android:layout_below="@+id/textView1"
            android:layout_gravity="bottom"
            android:layout_toRightOf="@+id/textView10"
            android:ems="10"
            android:textAppearance="?textAppearanceSmallPopupMenu"
            android:inputType="number"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView3"
            android:layout_alignBottom="@+id/textView3"
            android:layout_alignRight="@+id/editText2"
            android:text="@string/text12" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView4"
            android:layout_alignBottom="@+id/textView4"
            android:layout_alignLeft="@+id/textView12"
            android:text="@string/text13" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView5"
            android:layout_alignBottom="@+id/textView5"
            android:layout_alignLeft="@+id/textView13"
            android:text="@string/text14" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView6"
            android:layout_alignBottom="@+id/textView6"
            android:layout_alignLeft="@+id/textView14"
            android:text="@string/text15" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView7"
            android:layout_alignBottom="@+id/textView7"
            android:layout_alignLeft="@+id/textView15"
            android:text="@string/text16" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView8"
            android:layout_alignBottom="@+id/textView8"
            android:layout_alignLeft="@+id/textView16"
            android:text="@string/text17" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView9"
            android:layout_alignBottom="@+id/textView9"
            android:layout_alignLeft="@+id/textView17"
            android:text="@string/text18" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView10"
            android:layout_alignBottom="@+id/textView10"
            android:layout_alignLeft="@+id/textView18"
            android:text="@string/text19" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView11"
            android:layout_alignBottom="@+id/textView11"
            android:layout_alignLeft="@+id/textView19"
            android:text="@string/text20" />

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/botao"
            android:layout_alignLeft="@+id/textView4"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="30dp"
            android:textColor="@color/abc_primary_text_disable_only_material_dark"
            android:text="@string/button1" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/botao"
            android:layout_alignBottom="@+id/button1"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="10dp"
            android:layout_alignBaseline="@+id/button1"
            android:textColor="@color/abc_primary_text_disable_only_material_dark"
            android:text="@string/button2" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="2dp"
            android:fontFamily="Lucida-Handwriting"
            android:text="Â®M.Anjos_Â©"
            android:textStyle="italic" />
    </RelativeLayout>


</FrameLayout>
